feat: add transition color in button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,8 +22,6 @@
         <div class="cep-text">
             <table id="tableCEP"></table>
         </div> 
-
-        
     </main>
 
     <script src="./app.js"></script>
